tests/ui/recv-borrow-endpoint-alias.stderr
error[E0107]: struct takes 1 generic argument but 2 generic arguments were supplied
  --> tests/ui/recv-borrow-endpoint-alias.rs:38:20
   |
38 |     endpoint: &mut Endpoint<'r, 0, SessionKit<'cfg, T, U, C, MAX_RV>>,
   |                    ^^^^^^^^      ----------------------------------- help: remove the unnecessary generic argument
   |                    |
   |                    expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `ROLE`
  --> src/endpoint.rs
   |
   | pub struct Endpoint<'r, const ROLE: u8> {
   |            ^^^^^^^^     --------------

error[E0499]: cannot borrow `*endpoint` as mutable more than once at a time
  --> tests/ui/recv-borrow-endpoint-alias.rs:46:22
   |
45 |     let payload = futures::executor::block_on(endpoint.recv::<g::Msg<7, FramePayload>>()).unwrap();
   |                                               -------- first mutable borrow occurs here
46 |     let flow_again = endpoint.flow::<g::Msg<8, u8>>().unwrap();
   |                      ^^^^^^^^ second mutable borrow occurs here
47 |     core::hint::black_box(&flow_again);
48 |     core::hint::black_box(&payload);
   |                           -------- first borrow later used here
